--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -345,6 +345,9 @@ config KASAN_SHADOW_OFFSET
 	default 0xeffffff900000000 if ARM64_VA_BITS_36 && KASAN_SW_TAGS
 	default 0xffffffffffffffff
 
+config ARCH_HAS_CPU_RELAX
+	def_bool y
+
 source "arch/arm64/Kconfig.platforms"
 
 menu "Kernel Features"
