kexec: Enable quick kexec on openEuler
hulk inclusion
category: feature
bugzilla: 48159
CVE: N/A

------------------------------

Enable quick kexec on openEuler by default.

Signed-off-by: Sang Yan <sangyan@huawei.com>
Reviewed-by: Jing Xiangfeng <jingxiangfeng@huawei.com>
Signed-off-by: Zheng Zengkai <zhengzengkai@huawei.com>

--- a/arch/arm64/configs/openeuler_defconfig
+++ b/arch/arm64/configs/openeuler_defconfig
@@ -704,6 +704,7 @@ CONFIG_CRYPTO_AES_ARM64_BS=m
 #
 CONFIG_CRASH_CORE=y
 CONFIG_KEXEC_CORE=y
+CONFIG_QUICK_KEXEC=y
 CONFIG_SET_FS=y
 CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
