arm64/mpam: Preparing for MPAM refactoring
hulk inclusion
category: feature
bugzilla: 34278
CVE: NA

-------------------------------------------------

To make MPAM feature perfectly compatiable with resctrl sysfs provided
by Intel-RDT, we are ready to carry out a large-scale refactoring.

We move mpam.c, mpam_ctrlmon.c and mpam_mon.c to the mpam/ subdirectory
under arch/arm64/kernel directory, and rename mpam.c to mpam_resctrl.c,
of which function is expected to fully take up the internal resctrl
jobs including many new supports such as cdp(Code Data Prioritization)
and new interaction style.

Original operations on resctrl sysfs toward resctrl resource will be
remapped to operations with new structures.

Before we formally declare that we have accomplished entire refactoring
jobs, MPAM driver under our implementation is incomplete.

Signed-off-by: Wang ShaoBo <bobo.shaobowang@huawei.com>
Reviewed-by: Xiongfeng Wang <wangxiongfeng2@huawei.com>
Reviewed-by: Cheng Jian <cj.chengjian@huawei.com>
Signed-off-by: Yang Yingliang <yangyingliang@huawei.com>
Signed-off-by: Cheng Jian <cj.chengjian@huawei.com>

--- a/arch/arm64/kernel/Makefile
+++ b/arch/arm64/kernel/Makefile
@@ -63,7 +63,7 @@ arm64-obj-$(CONFIG_CRASH_CORE)		+= crash_core.o
 arm64-obj-$(CONFIG_ARM_SDE_INTERFACE)	+= sdei.o
 arm64-obj-$(CONFIG_ARM64_SSBD)		+= ssbd.o
 arm64-obj-$(CONFIG_SDEI_WATCHDOG) 	+= watchdog_sdei.o
-arm64-obj-$(CONFIG_MPAM)		+= mpam.o mpam_ctrlmon.o mpam_mon.o
+arm64-obj-$(CONFIG_MPAM)		+= mpam/
 
 obj-y					+= $(arm64-obj-y) vdso/ probes/
 obj-$(CONFIG_ARM64_ILP32)		+= vdso-ilp32/
