--- a/arch/arm64/configs/openeuler_defconfig
+++ b/arch/arm64/configs/openeuler_defconfig
@@ -7098,3 +7098,4 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # end of Kernel Testing and Coverage
 # end of Kernel hacking
 CONFIG_MEMIG_SCAN_MODULE=m
+CONFIG_MEMIG_SWAP_MODULE=m
