--- a/arch/x86/configs/openeuler_defconfig
+++ b/arch/x86/configs/openeuler_defconfig
@@ -8490,3 +8490,4 @@ CONFIG_ARCH_HAS_KCOV=y
 # end of Kernel Testing and Coverage
 # end of Kernel hacking
 CONFIG_MEMIG_SCAN_MODULE=m
+CONFIG_MEMIG_SWAP_MODULE=m
