arm64: add Raspberry Pi specific config: CONFIG_OPENEULER_RASPBERRYPI for openEuler
raspberrypi inclusion
category: feature
bugzilla: 50432

------------------------------

Add new config CONFIG_OPENEULER_RASPBERRYPI to denote that the compiled kernel will be used for Raspberry Pi.

Signed-off-by: Fang Yafen <yafen@iscas.ac.cn>
Reviewed-by: Xie XiuQi <xiexiuqi@huawei.com>
Signed-off-by: Zheng Zengkai <zhengzengkai@huawei.com>

--- a/drivers/soc/bcm/Kconfig
+++ b/drivers/soc/bcm/Kconfig
@@ -23,6 +23,13 @@ config RASPBERRYPI_POWER
 	  This enables support for the RPi power domains which can be enabled
 	  or disabled via the RPi firmware.
 
+config OPENEULER_RASPBERRYPI
+	bool "Raspberry Pi specific config for openEuler"
+	default n
+	select ARCH_BCM2835
+	help
+	  This enables support for the Raspberry Pi devices specific code in openEuler kernel.
+
 config SOC_BCM63XX
 	bool "Broadcom 63xx SoC drivers"
 	depends on BMIPS_GENERIC || COMPILE_TEST
