--- a/arch/arm64/configs/bcm2711_defconfig
+++ b/arch/arm64/configs/bcm2711_defconfig
@@ -1353,6 +1353,7 @@ CONFIG_MAILBOX=y
 CONFIG_BCM2835_MBOX=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_RASPBERRYPI_POWER=y
+CONFIG_OPENEULER_RASPBERRYPI=y
 CONFIG_EXTCON_ARIZONA=m
 CONFIG_IIO=m
 CONFIG_IIO_BUFFER_CB=m
