resctrlfs: fix up RESCTRL dependency
hulk inclusion
category: bugfix
feature: ARM MPAM support
bugzilla: 48265
CVE: NA

--------------------------------

On x86 platform,
make allmodconfig && make -j64

  CALL    scripts/checksyscalls.sh
  DESCEND  objtool
  CHK     include/generated/compile.h
  CC      fs/resctrlfs.o
fs/resctrlfs.c:36:25: fatal error: asm/resctrl.h: No such file or
directory
 #include <asm/resctrl.h>
                         ^
compilation terminated.
make[1]: *** [fs/resctrlfs.o] Error 1
make: *** [fs] Error 2

Make RESCTRL do not depend on INTEL_RDT.

Signed-off-by: Xie XiuQi <xiexiuqi@huawei.com>
Reviewed-by: Yang Yingliang <yangyingliang@huawei.com>
Signed-off-by: Yang Yingliang <yangyingliang@huawei.com>
Signed-off-by: Wang ShaoBo <bobo.shaobowang@huawei.com>
Reviewed-by: Cheng Jian <cj.chengjian@huawei.com>
Signed-off-by: Zheng Zengkai <zhengzengkai@huawei.com>

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -354,7 +354,7 @@ endmenu
 config RESCTRL
 	bool "Support Memory Partitioning and Monitoring"
 	default n
-	depends on INTEL_RDT || MPAM
+	depends on MPAM
 	select KERNFS
 	help
 	  Memory Partitioning and Monitoring. More exactly Memory system
