--- a/arch/arm64/configs/openeuler_defconfig
+++ b/arch/arm64/configs/openeuler_defconfig
@@ -7097,5 +7097,8 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_MEMTEST is not set
 # end of Kernel Testing and Coverage
 # end of Kernel hacking
+CONFIG_MPAM=y
+CONFIG_RESCTRL=y
+CONFIG_ACPI_MPAM=y
 CONFIG_MEMIG_SCAN=m
 CONFIG_MEMIG_SWAP=m
