--- a/arch/arm64/configs/openeuler_defconfig
+++ b/arch/arm64/configs/openeuler_defconfig
@@ -7097,5 +7097,5 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_MEMTEST is not set
 # end of Kernel Testing and Coverage
 # end of Kernel hacking
-CONFIG_MEMIG_SCAN_MODULE=m
-CONFIG_MEMIG_SWAP_MODULE=m
+CONFIG_MEMIG_SCAN=m
+CONFIG_MEMIG_SWAP=m
