--- a/arch/x86/configs/openeuler_defconfig
+++ b/arch/x86/configs/openeuler_defconfig
@@ -8489,5 +8489,5 @@ CONFIG_ARCH_HAS_KCOV=y
 # CONFIG_HYPERV_TESTING is not set
 # end of Kernel Testing and Coverage
 # end of Kernel hacking
-CONFIG_MEMIG_SCAN_MODULE=m
-CONFIG_MEMIG_SWAP_MODULE=m
+CONFIG_MEMIG_SCAN=m
+CONFIG_MEMIG_SWAP=m
