--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -496,3 +496,10 @@ config RANDOM_TRUST_BOOTLOADER
 	booloader is trustworthy so it will be added to the kernel's entropy
 	pool. Otherwise, say N here so it will be regarded as device input that
 	only mixes the entropy pool.
+
+config PIN_MEMORY_DEV
+	tristate "/dev/pinmem character device"
+	depends on PIN_MEMORY
+	default m
+	help
+	pin memory driver
