video&logo: keep the original function for non-RPi
raspberrypi inclusion
category: feature
bugzilla: 50432

------------------------------

This patch adjusts following video & logo patches for
raspberry pi on non-Raspberry Pi platforms, using specific
config CONFIG_OPENEULER_RASPBERRYPI to distinguish them:

38a1e371 bcm2708 framebuffer driver
08fb78e5 drm: Checking of the pitch is only valid for linear formats
31c95f1a media: videobuf2: Allow exporting of a struct dmabuf

Signed-off-by: Fang Yafen <yafen@iscas.ac.cn>
Reviewed-by: Xie XiuQi <xiexiuqi@huawei.com>
Signed-off-by: Zheng Zengkai <zhengzengkai@huawei.com>

--- a/drivers/video/logo/Makefile
+++ b/drivers/video/logo/Makefile
@@ -4,7 +4,11 @@
 obj-$(CONFIG_LOGO)			+= logo.o
 obj-$(CONFIG_LOGO_LINUX_MONO)		+= logo_linux_mono.o
 obj-$(CONFIG_LOGO_LINUX_VGA16)		+= logo_linux_vga16.o
+ifdef CONFIG_OPENEULER_RASPBERRYPI
+obj-$(CONFIG_LOGO_LINUX_CLUT224)	+= logo_linux_rpi_clut224.o
+else
 obj-$(CONFIG_LOGO_LINUX_CLUT224)	+= logo_linux_clut224.o
+endif
 obj-$(CONFIG_LOGO_DEC_CLUT224)		+= logo_dec_clut224.o
 obj-$(CONFIG_LOGO_MAC_CLUT224)		+= logo_mac_clut224.o
 obj-$(CONFIG_LOGO_PARISC_CLUT224)	+= logo_parisc_clut224.o
