etmem: Modify the memig feature name to etmem
euleros inclusion
category: feature
feature: etmem
bugzilla: 48246

-------------------------------------------------

The original memory extension feature name is memig,
after open source the feature name is changed to etmem.

This patch is used to synchronously modify the feature name and file
name.

The config options and the file name are modified synchronously to etmem.

Signed-off-by: liubo <liubo254@huawei.com>
Reviewed-by: geruijun <geruijun@huawei.com>
Reviewed-by: Xiongfeng Wang <wangxiongfeng2@huawei.com>
Signed-off-by: Zheng Zengkai <zhengzengkai@huawei.com>

--- a/arch/arm64/configs/openeuler_defconfig
+++ b/arch/arm64/configs/openeuler_defconfig
@@ -7110,5 +7110,5 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 CONFIG_MPAM=y
 CONFIG_RESCTRL=y
 CONFIG_ACPI_MPAM=y
-CONFIG_MEMIG_SCAN=m
-CONFIG_MEMIG_SWAP=m
+CONFIG_ETMEM_SCAN=m
+CONFIG_ETMEM_SWAP=m
