net: hns3: adds support for setting pf max tx rate via sysfs
driver inclusion
category: feature
bugzilla: NA
CVE: NA

----------------------------

This patch adds support for setting/getting pf max tx rate via sysfs:

echo <rate Mbit/s> > /sys/class/net/<eth name>/kunpeng/pf/max_tx_rate
cat /sys/class/net/<eth name>/kunpeng/pf/max_tx_rate

Signed-off-by: Yonglong Liu <liuyonglong@huawei.com>
Reviewed-by: li yongxin <liyongxin1@huawei.com>
Signed-off-by: Yang Yingliang <yangyingliang@huawei.com>
Signed-off-by: Cheng Jian <cj.chengjian@huawei.com>

--- a/drivers/net/ethernet/hisilicon/hns3/Makefile
+++ b/drivers/net/ethernet/hisilicon/hns3/Makefile
@@ -38,7 +38,8 @@ HCLGE_OBJ = 	hns3pf/hclge_main.o \
 			hns3pf/hclge_err.o
 
 
-HCLGE_OBJ_IT_MAIN	=	hns3_extension/hns3pf/hclge_main_it.o
+HCLGE_OBJ_IT_MAIN	=	hns3_extension/hns3pf/hclge_main_it.o \
+				hns3_extension/hns3pf/hclge_sysfs.o
 obj-$(CONFIG_HNS3_HCLGE) += hclge.o
 hclge-objs := $(HCLGE_OBJ) $(HCLGE_OBJ_IT_MAIN)
 hclge-$(CONFIG_HNS3_DCB) += hns3pf/hclge_dcb.o
