etmem: add etmem-scan feature
euleros inclusion
category: feature
feature: etmem
bugzilla: 49889

-------------------------------------------------

etmem, the memory vertical expansion technology,
uses DRAM and high-performance storage new media to form multi-level memory storage.
By grading the stored data, etmem migrates the classified cold storage data
from the storage medium to the high-performance storage medium,
so as to achieve the purpose of memory capacity expansion and memory cost reduction.

The etmem feature is mainly composed of two parts: etmem_scan and
etmem_swap.

This patch is mainly used to generate etmem_scan.ko.
etmem_scan.ko is used to scan the virtual address of the target process
and return the address access information to
the user mode for grading cold and hot pages.

Signed-off-by: Fengguang Wu <fengguang.wu@intel.com>
Signed-off-by: yanxiaodan <yanxiaodan@huawei.com>
Signed-off-by: Feilong Lin <linfeilong@huawei.com>
Signed-off-by: geruijun <geruijun@huawei.com>
Signed-off-by: liubo <liubo254@huawei.com>
Acked-by: Xie XiuQi <xiexiuqi@huawei.com>
Reviewed-by: Jing Xiangfeng<jingxiangfeng@huawei.com>
Signed-off-by: Yang Yingliang <yangyingliang@huawei.com>
Signed-off-by: Cheng Jian <cj.chengjian@huawei.com>

--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -599,6 +599,12 @@ config PARMAN
 config PRIME_NUMBERS
 	tristate
 
+config ETMEM_SCAN
+	tristate "module: etmem page scan for etmem support"
+	help
+	 etmem page scan feature
+	 used to scan the virtual address of the target process
+
 config STRING_SELFTEST
 	tristate "Test string functions"
 
