etmem: add etmem-swap feature
euleros inclusion
category: feature
feature: etmem
bugzilla: 49889

-------------------------------------------------

In order to achieve the goal of memory expansion,
cold pages need to be migrated to the swap partition,
etmem_swap.ko is to achieve this purpose.

This patch is mainly used to generate etmem_swap.ko.
etmem_swap.ko is used to transfer the address
passed in the user state for page migration.

Signed-off-by: yanxiaodan <yanxiaodan@huawei.com>
Signed-off-by: linmiaohe <linmiaohe@huawei.com>
Signed-off-by: louhongxiang <louhongxiang@huawei.com>
Signed-off-by: liubo <liubo254@huawei.com>
Signed-off-by: geruijun <geruijun@huawei.com>
Signed-off-by: liangchenshu <liangchenshu@huawei.com>
Acked-by: Xie XiuQi <xiexiuqi@huawei.com>
Reviewed-by: Jing Xiangfeng<jingxiangfeng@huawei.com>
Signed-off-by: Yang Yingliang <yangyingliang@huawei.com>
Signed-off-by: Cheng Jian <cj.chengjian@huawei.com>

--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -605,6 +605,11 @@ config ETMEM_SCAN
 	 etmem page scan feature
 	 used to scan the virtual address of the target process
 
+config ETMEM_SWAP
+       tristate "module: etmem page swap for etmem support"
+       help
+         etmem page swap feature
+
 config STRING_SELFTEST
 	tristate "Test string functions"
 
