--- a/fs/proc/Makefile
+++ b/fs/proc/Makefile
@@ -34,3 +34,4 @@ proc-$(CONFIG_PROC_VMCORE)	+= vmcore.o
 proc-$(CONFIG_PRINTK)	+= kmsg.o
 proc-$(CONFIG_PROC_PAGE_MONITOR)	+= page.o
 obj-$(CONFIG_ETMEM_SCAN)     += etmem_scan.o
+obj-$(CONFIG_ETMEM_SWAP)     += etmem_swap.o
