config: Enable the config option of the etmem feature
euleros inclusion
category: feature
feature: etmem
bugzilla: 49889

-------------------------------------------------

Enable etmem feature config option.
set default value of CONFIG_ETMEM_SCAN and
CONFIG_ETMEM_SWAP.

Before using the etmem feature, need to insert
etmem_scan.ko and etmem_swap.ko first.

Signed-off-by: liubo <liubo254@huawei.com>
Acked-by: Xie XiuQi <xiexiuqi@huawei.com>
Reviewed-by: Jing Xiangfeng<jingxiangfeng@huawei.com>
Signed-off-by: Yang Yingliang <yangyingliang@huawei.com>
Signed-off-by: Cheng Jian <cj.chengjian@huawei.com>

--- a/arch/arm64/configs/openeuler_defconfig
+++ b/arch/arm64/configs/openeuler_defconfig
@@ -5968,3 +5968,5 @@ CONFIG_IO_STRICT_DEVMEM=y
 # CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_CORESIGHT is not set
 CONFIG_SMMU_BYPASS_DEV=y
+CONFIG_ETMEM_SCAN=m
+CONFIG_ETMEM_SWAP=m
