--- a/arch/arm64/configs/hulk_defconfig
+++ b/arch/arm64/configs/hulk_defconfig
@@ -5661,3 +5661,5 @@ CONFIG_IO_STRICT_DEVMEM=y
 # CONFIG_DEBUG_EFI is not set
 # CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_CORESIGHT is not set
+CONFIG_ETMEM_SCAN=m
+CONFIG_ETMEM_SWAP=m
