--- a/arch/x86/configs/openeuler_defconfig
+++ b/arch/x86/configs/openeuler_defconfig
@@ -7537,3 +7537,5 @@ CONFIG_OPTIMIZE_INLINING=y
 # CONFIG_PUNIT_ATOM_DEBUG is not set
 CONFIG_UNWINDER_ORC=y
 # CONFIG_UNWINDER_FRAME_POINTER is not set
+CONFIG_ETMEM_SCAN=m
+CONFIG_ETMEM_SWAP=m
